; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_input.c_INPUT_SelectMultiJoy.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_input.c_INPUT_SelectMultiJoy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@joy_multijoy_no = common dso_local global i32 0, align 4
@INPUT_joy_multijoy = common dso_local global i64 0, align 8
@Atari800_machine_type = common dso_local global i64 0, align 8
@Atari800_MACHINE_5200 = common dso_local global i64 0, align 8
@STICK = common dso_local global i32* null, align 8
@PIA_PORT_input = common dso_local global i32* null, align 8
@TRIG_input = common dso_local global i32* null, align 8
@GTIA_TRIG = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @INPUT_SelectMultiJoy(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = and i32 %3, 3
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  store i32 %5, i32* @joy_multijoy_no, align 4
  %6 = load i64, i64* @INPUT_joy_multijoy, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %28

8:                                                ; preds = %1
  %9 = load i64, i64* @Atari800_machine_type, align 8
  %10 = load i64, i64* @Atari800_MACHINE_5200, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %28

12:                                               ; preds = %8
  %13 = load i32*, i32** @STICK, align 8
  %14 = load i32, i32* %2, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = or i32 240, %17
  %19 = load i32*, i32** @PIA_PORT_input, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 0
  store i32 %18, i32* %20, align 4
  %21 = load i32*, i32** @TRIG_input, align 8
  %22 = load i32, i32* %2, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %21, i64 %23
  %25 = load i32, i32* %24, align 4
  %26 = load i32*, i32** @GTIA_TRIG, align 8
  %27 = getelementptr inbounds i32, i32* %26, i64 0
  store i32 %25, i32* %27, align 4
  br label %28

28:                                               ; preds = %12, %8, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
